--- a/less/styles.less
+++ b/less/styles.less
@@ -1,3 +1,75 @@
 // Variables
 @background-color: #FFFFFF;
 @primary-color: #55A3FA;
+@text-color: #566A81;
+@font-family: 'Quicksand', sans-serif;
+@shadow: 0 4px 6px 0 rgba(34, 38, 42, .2);
+
+
+body {
+    font-family: @font-family;
+    font-size: 18px;
+    padding: 0 2rem;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+
+    #logo {
+        color: @primary-color;
+
+        h2 {    
+            font-size: 2rem; 
+        }
+    }
+
+    #nav-menu {
+        display: flex;
+        align-items: center;
+        list-style: none;
+        color: @text-color;
+
+        li {
+            padding-left: 2rem;
+            text-align: right;
+        }
+    }
+}
+
+.hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 10rem 0;
+    max-width: 700px;
+
+    .profile-photo {
+        width: 120px;
+        border-radius: 50%;
+        box-shadow: @shadow;
+        align-self: center;
+    }
+
+    .uvp {
+        h1 {
+            font-size: 3.5rem;
+            margin: 1rem auto;
+        }
+
+        p {
+            line-height: 2rem;
+            color: @text-color;
+        }
+    }
+
+    @media (min-width:800px) {
+        flex-direction: row;
+        .profile-photo{
+            align-self: flex-start;
+        }
+    }
+
+     
+
+}
