fixed media query

--- a/less/styles.less
+++ b/less/styles.less
@@ -64,9 +64,12 @@ nav {
     }
 
     @media (min-width:800px) {
+        margin: 0 auto;
+        
         flex-direction: row;
         .profile-photo{
             align-self: flex-start;
+            margin-right: 3rem;
         }
     }
 
