--- a/less/styles.less
+++ b/less/styles.less
@@ -2,6 +2,7 @@
 @background-color: #FFFFFF;
 @primary-color: #55A3FA;
 @text-color: #566A81;
+@black: #22262A;
 @font-family: 'Quicksand', sans-serif;
 @shadow: 0 4px 6px 0 rgba(34, 38, 42, .2);
 
@@ -55,6 +56,7 @@ nav {
         h1 {
             font-size: 3.5rem;
             margin: 1rem auto;
+            color: @black;
         }
 
         p {
@@ -65,7 +67,7 @@ nav {
 
     @media (min-width:800px) {
         margin: 0 auto;
-        
+
         flex-direction: row;
         .profile-photo{
             align-self: flex-start;
